--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,5 +32,5 @@ jobs:
       run: |
         # запуск проверки проекта по flake8
         python -m flake8
-        cd api_yamdb/
-        python manage.py test
+        cd yamdb_final/
+        pytest
