--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,8 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../api_yamdb
+    image: hiais/yamdb_final
+    #build: ../api_yamdb
     restart: always
     volumes:
       - static_value:/api_yamdb/static/
