--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Django-app workflow
+name: yamdb_final workflow
 
 on: [push]
 
@@ -64,6 +64,8 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker compose up -d
+            sudo docker compose exec -T web python manage.py migrate
+            sudo docker compose exec -T web python manage.py collectstatic --noinput
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
