--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -21,10 +21,12 @@ jobs:
         python -m flake8
         cd .
         pytest
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -41,6 +43,7 @@ jobs:
           context: ./api_yamdb
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
